fix flickering of admin toolbar

--- a/scss/components/_toolbar.scss
+++ b/scss/components/_toolbar.scss
@@ -10,6 +10,7 @@
 
 #toolbar-bar {
   position: fixed;
+  width: 100%;
 }
 
 // fixes for module 'toolbar_anti_flicker'
